Fixed boolean fields vertical alignment in one.mini view.

--- a/less/one-mini.less
+++ b/less/one-mini.less
@@ -30,6 +30,10 @@
     float:left;
     width:75%;
 
+  > [type="checkbox"]{
+    margin-top:10px;
+  }
+
   > .help-block{
     min-width:50px;
     clear:left;
